--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,8 @@ div {
 	border-top-color: #006680;
 }
         #apDiv25 {
-	position: absolute;
+
+	position: auto;
 	width: 360px;
 	height: 30px;
 	z-index: 10;
@@ -245,7 +246,7 @@ div {
 	color: #FFF;
 }
         #apDiv26 {
-	position: absolute;
+	position: auto;
 	width: 576px;
 	height: 26px;
 	z-index: 11;
@@ -313,10 +314,11 @@ div {
 	width: 720px; 
 	position: relative;*/
 /*ETIQUETAS*/
+
 body{
 
 background-repeat: no-repeat;
-background-size: cover;
+background-size: 60px;
 background-color: #666;
 }
 h1{
@@ -370,11 +372,12 @@ li{
 section{
 	width: 713px;
 	background: white;
-	height: 720px;
+	height: 1600px;
 	float: left;
 	margin-top: 7px;
 	border-radius: 10px 0px 0px 0px;
 }
+
 section2{
 	width: 1000px;
 	background: white;
@@ -401,8 +404,9 @@ footer{
 	border-radius: 0px 0px 10px 10px;
 	margin-bottom: 20px;
 	font-size: 12px;
-	text-align: left;
+	text-align: center;
 }
+
 p{
 
 	font-size: 15px;
@@ -411,6 +415,8 @@ p{
 	padding: 10px;
 	text-align: justify;
 }
+
+
 /*CLASES*/
 .ancho_menu_home{width: 900px;}
 .ancho_menu_paginas{width: 970px;}
@@ -432,12 +438,34 @@ p{
 	text-decoration: none;
 }
 
+.menu li:hover ul { 
+
+       display: block;
+       position:absolute;
+       padding:0;
+       margin: -16px;
+       margin-top: 10px;
+       width: 10px;
+       float:none;
+}
+
+.menu li ul {
+
+	display: none;
+	position: absolute;
+	min-width: 130px;
+
+}
+
 /*SEUDO CLASES*/
+
 p {
-	font-size: 12px;
+	font-size: 20px;
 	font-weight: normal;
 	color: #333;
 }
+
+
 /*actividades*/
 #act1
 {
@@ -459,6 +487,44 @@ p {
 	margin-top: 10px;
 }
 #pact2
+{
+	font-family:'Shadows Into Light', cursive;
+	font-size: 15px;
+	text-align: left;
+	margin-bottom: 3px;
+
+
+}
+
+#subact2
+{
+	background: #FFFFFF;
+	 width: 685px;
+	height: 125px;
+	margin-left: 14px;
+	margin-top: 10px;
+}
+
+#form2
+{
+	font-family:'Shadows Into Light', cursive;
+	font-size: 15px;
+	text-align: left;
+	margin-bottom: 3px;
+
+
+}
+
+#subact3
+{
+	background: #FFFFFF;
+	 width: 685px;
+	height: 125px;
+	margin-left: 14px;
+	margin-top: 10px;
+}
+
+#form3
 {
 	font-family:'Shadows Into Light', cursive;
 	font-size: 15px;
