--- a/css/style.css
+++ b/css/style.css
@@ -272,9 +272,9 @@ div {
 	position: relative;
 	color: #000;
 }
-/*#sonido{
+#sonido{
 	width: 720px; 
-	position: relative;*/
+	position: relative;
 /*ETIQUETAS*/
 
 body{
